--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+    background-color: #1f2937;
+}
+/* header */
 header{
     margin: none;
 }
@@ -5,15 +9,170 @@ header{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: cornflowerblue;
+    background-color: #1f2937;
     height: 50px;
-    margin:none;
-    color: azure;
+    color: #f9f4f9;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 25px;
+    font-size: 24px;
 }
 
 .container {
     display: flex;
     gap: 20px;
+}
+
+.option-1:hover, .option-2:hover, .option-3:hover {
+    color: rgb(118, 118, 236);
+}
+
+/* Part 1 */
+.part-1 {
+    background-color: #1f2937;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 60px;
+}
+
+.container-presentation {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 30px;
+}
+
+.title {
+    font-size: 48px;
+    color: #f9faf8;
+}
+
+.presentation {
+    color: #e5e7eb;
+    font-size: 18px;
+}
+
+.me-photo {
+    height: 350px;
+    width: 350px;
+    border-radius: 35px;
+    border: none;
+}
+.first-button {
+    width: 100px;
+    height: 40px;
+    background-color: rgb(90, 114, 255);
+    align-self: center;
+    border-bottom-style: none;
+    color: white;
+    font-size: 15px;
+    border-radius: 15px;
+}
+
+/* Part 2 */
+.part-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 70px;
+    background-color: white;
+    font-size: 36px;
+    color: #1f2937;
+    font-weight:bold;
+    gap: 40px;
+}
+
+.projects-images {
+    display:flex;
+    gap: 70px;
+}
+
+img {
+    height: 200px;
+    width: 200px;
+    border: solid rgb(90, 114, 255) 7px;
+    border-radius: 10px;
+}
+
+.projects-description {
+    display: flex;
+    font-size: 25px;
+    gap: 15px;
+}
+
+/* Part 3 */
+.part-3 {
+    display: flex;
+    align-items: center;
+    padding: 100px;
+    background-color: #e5e7eb;
+    justify-content: center;
+}
+
+.quote-container {
+    display: flex;
+    flex-direction: column;
+    padding: 25px;
+}
+
+.quote {
+    font-size: 36px;
+    font-weight: lighter;
+    font-style: italic;
+}
+
+.quote-author {
+    align-self:flex-end;
+    font-size: 15px;
+    font-weight: bolder;
+}
+
+/* Part 4 */
+.part-4 {
+    padding: 100px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+}
+
+.container-part-4 {
+    background-color: #3882f6;
+    padding: 60px;
+    width: 850px;
+    border-radius: 25px;
+    display: flex;
+    color: white;
+    justify-content: space-around;
+}
+
+.two-texts {
+    display: flex;
+    flex-direction: column;
+}
+
+.Clickbutton {
+    font-size: 35px;
+}
+.tomade {
+    font-size: 15px;
+}
+
+.button-final {
+    background-color:#3882f6;
+    border:solid white 5px;
+    border-radius: 10px;
+    width: 150px;
+    font-size: 15px;
+    color: white;
+}
+
+.button-final:active {
+    background-color: #5c7090;
+}
+/* Footer */
+footer {
+    background-color: #1f2937;
+    padding: 50px;
+    text-align: center;
+    color: white;
+    font-size: 20px;
 }
