--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body{
-    background-color: #1f2937;
+    font-family: sans-serif;
 }
 /* header */
 header{
-    margin: none;
+    background-color: #1f2937;
+    padding: 1em 13em;
 }
 .container-header {
     display: flex;
@@ -12,7 +18,6 @@ header{
     background-color: #1f2937;
     height: 50px;
     color: #f9f4f9;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 24px;
 }
 
@@ -57,6 +62,7 @@ header{
     border-radius: 35px;
     border: none;
 }
+
 .first-button {
     width: 100px;
     height: 40px;
@@ -68,6 +74,10 @@ header{
     border-radius: 15px;
 }
 
+.first-button:hover {
+    background-color: rgb(98, 113, 196);
+}
+
 /* Part 2 */
 .part-2 {
     display: flex;
@@ -75,13 +85,13 @@ header{
     align-items: center;
     padding: 70px;
     background-color: white;
-    font-size: 36px;
+    font-size: 28px;
     color: #1f2937;
     font-weight:bold;
     gap: 40px;
 }
 
-.projects-images {
+.projects-container {
     display:flex;
     gap: 70px;
 }
@@ -93,10 +103,9 @@ img {
     border-radius: 10px;
 }
 
-.projects-description {
+.project-description {
     display: flex;
-    font-size: 25px;
-    gap: 15px;
+    font-size: 20px;
 }
 
 /* Part 3 */
@@ -163,6 +172,10 @@ img {
     width: 150px;
     font-size: 15px;
     color: white;
+}
+
+.button-final:hover {
+    background-color: #567fc1;
 }
 
 .button-final:active {
