--- a/style.css
+++ b/style.css
@@ -13,17 +13,18 @@ header{
 }
 .container-header {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     background-color: #1f2937;
     height: 50px;
     color: #f9f4f9;
-    font-size: 24px;
+    font-size: 32px;
 }
 
 .container {
     display: flex;
     gap: 20px;
+    font-size: 20px;
 }
 
 .option-1:hover, .option-2:hover, .option-3:hover {
@@ -42,8 +43,7 @@ header{
 .container-presentation {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    gap: 30px;
+    gap: 35px;
 }
 
 .title {
@@ -61,6 +61,10 @@ header{
     width: 350px;
     border-radius: 35px;
     border: none;
+}
+
+.me-photo:hover{
+    transform: scale(1.2) rotate(4deg);
 }
 
 .first-button {
@@ -84,7 +88,7 @@ header{
     flex-direction: column;
     align-items: center;
     padding: 70px;
-    background-color: white;
+    background-color: rgb(190, 153, 153);
     font-size: 28px;
     color: #1f2937;
     font-weight:bold;
@@ -107,13 +111,16 @@ img {
     display: flex;
     font-size: 20px;
 }
+.project:hover {
+    transform:scale(1.2);
+}
 
 /* Part 3 */
 .part-3 {
     display: flex;
     align-items: center;
     padding: 100px;
-    background-color: #e5e7eb;
+    background-color: #57606d;
     justify-content: center;
 }
 
@@ -138,7 +145,7 @@ img {
 /* Part 4 */
 .part-4 {
     padding: 100px;
-    background-color: white;
+    background-color: rgb(190, 153, 153);
     display: flex;
     justify-content: center;
 }
@@ -184,7 +191,7 @@ img {
 /* Footer */
 footer {
     background-color: #1f2937;
-    padding: 50px;
+    padding: 20px;
     text-align: center;
     color: white;
     font-size: 20px;
